--- a/package.json
+++ b/package.json
@@ -31,6 +31,7 @@
     "element-ui": "^2.15.14",
     "vue": "^2.7.14",
     "vue-router": "^3.5.4",
+    "vue2-google-maps": "^0.10.7",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
