--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
   "dependencies": {
     "axios": "^1.4.0",
     "element-ui": "^2.15.14",
+    "leaflet": "^1.9.4",
     "vue": "^2.7.14",
     "vue-router": "^3.5.4",
     "vue2-google-maps": "^0.10.7",
+    "vue2-leaflet": "^2.7.1",
     "vuex": "^3.6.2"
   },
   "devDependencies": {
