--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "axios": "^1.6.2",
     "element-ui": "^2.15.14",
     "leaflet": "^1.9.4",
+    "moment": "^2.29.4",
     "vue": "^2.7.14",
     "vue-router": "^3.5.4",
     "vue2-google-maps": "^0.10.7",
