--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   },
   "dependencies": {
     "axios": "^1.6.2",
+    "bulma": "^0.9.4",
     "element-ui": "^2.15.14",
     "leaflet": "^1.9.4",
     "moment": "^2.29.4",
