--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,5 +10,8 @@
   "editor.defaultFormatter": "esbenp.prettier-vscode",
   "eslint.validate": ["javascript", "javascriptvue", "vue"],
   "stylelint.validate": ["css", "less", "postcss", "scss", "vue", "sass", "html"],
-  "cSpell.words": ["stylelint", "pinia", "commitlint", "unplugin"]
+  "cSpell.words": ["stylelint", "pinia", "commitlint", "unplugin"],
+  "[html]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode"
+  },
 }
