--- a/package.json
+++ b/package.json
@@ -57,34 +57,23 @@
     "postcss-html": "^1.5.0",
     "postcss-less": "^6.0.0",
     "prettier": "^2.8.8",
+    "stylelint": "^15.6.3",
+    "stylelint-config-html": "^1.1.0",
+    "stylelint-config-recess-order": "^4.0.0",
+    "stylelint-config-standard": "^33.0.0",
+    "stylelint-less": "^1.0.6",
+    "stylelint-order": "^6.0.3",
     "vite": "^4.3.9",
     "vue-eslint-parser": "^9.3.0"
   },
   "husky": {
     "hooks": {
+      "pre-commit": "lint-staged",
       "commit-msg": "commitlint -E HUSKY_GIT_PARAMS"
     }
   },
   "lint-staged": {
-    "*.{js,jsx,ts,tsx}": [
-      "prettier --write",
-      "eslint --fix"
-    ],
-    "*.vue": [
-      "prettier --write",
-      "eslint --fix",
-      "stylelint --fix"
-    ],
-    "*.{html,sass,scss,less}": [
-      "prettier --write",
-      "stylelint --fix"
-    ],
-    "package.json": [
-      "prettier --write"
-    ],
-    "*.md": [
-      "prettier --write"
-    ]
+    "src/**/*.js": ["eslint --fix", "git add"]
   },
   "config": {
     "commitizen": {
