--- a/package.json
+++ b/package.json
@@ -29,9 +29,11 @@
   "dependencies": {
     "axios": "^1.6.2",
     "bulma": "^0.9.4",
+    "date-fns": "^3.3.0",
     "element-ui": "^2.15.14",
     "leaflet": "^1.9.4",
     "moment": "^2.29.4",
+    "moment-timezone": "^0.5.44",
     "vue": "^2.7.14",
     "vue-router": "^3.5.4",
     "vue2-google-maps": "^0.10.7",
@@ -73,7 +75,10 @@
     }
   },
   "lint-staged": {
-    "src/**/*.js": ["eslint --fix", "git add"]
+    "src/**/*.js": [
+      "eslint --fix",
+      "git add"
+    ]
   },
   "config": {
     "commitizen": {
