--- a/package.json
+++ b/package.json
@@ -36,6 +36,7 @@
     "moment-timezone": "^0.5.44",
     "vue": "^2.7.14",
     "vue-router": "^3.5.4",
+    "vue-simple-flowchart": "^0.1.8",
     "vue2-google-maps": "^0.10.7",
     "vue2-leaflet": "^2.7.1",
     "vuex": "^3.6.2"
