--- a/.env.development
+++ b/.env.development
@@ -11,4 +11,5 @@ VITE_PROXY_DOMAIN = /api
 VITE_ROUTER_HISTORY = "hash"
 
 # 开发环境后端地址
-VITE_PROXY_DOMAIN_REAL = "http://127.0.0.1:3000"
+VITE_PROXY_DOMAIN_REAL = "http://127.0.0.1:8000"
+# VITE_PROXY_DOMAIN_REAL = "https://bpa.gov.mn/app/data/"
